--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@ephys/eslint-config-typescript": "16.0.2",
     "@rushstack/eslint-patch": "1.1.2",
     "@types/chai": "4.3.0",
+    "@types/chai-as-promised": "7.1.5",
     "@types/lodash": "4.14.181",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.26",
