--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "sinon-chai": "3.7.0",
     "snowflake-sdk": "1.6.8",
     "source-map-support": "0.5.21",
-    "sqlite3": "npm:@vscode/sqlite3@5.0.8",
+    "sqlite3": "5.0.3",
     "tedious": "14.4.0",
     "typedoc": "0.22.15",
     "typescript": "4.6.3"
