--- a/package.json
+++ b/package.json
@@ -40,12 +40,11 @@
     "@types/debug": "^4.1.7",
     "@types/inflection": "^1.13.0",
     "@types/validator": "^13.7.1",
+    "dayjs": "^1.11.1",
     "debug": "^4.3.3",
     "dottie": "^2.0.2",
     "inflection": "^1.13.2",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
     "pg-connection-string": "^2.5.0",
     "retry-as-promised": "^5.0.0",
     "semver": "^7.3.5",
