--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
     "@ephys/eslint-config-typescript": "16.0.2",
     "@rushstack/eslint-patch": "1.1.3",
     "@types/chai": "4.3.1",
+    "@types/chai-as-promised": "7.1.5",
+    "@types/chai-datetime": "0.0.37",
     "@types/lodash": "4.14.181",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.27",
     "@types/sinon": "10.0.11",
+    "@types/sinon-chai": "3.2.8",
     "@types/uuid": "8.3.4",
     "acorn": "8.7.0",
     "chai": "4.3.6",
