--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -342,6 +342,7 @@ jobs:
       matrix:
         node-version: [14, 16]
         minify-aliases: [true, false]
+        native: [true]
     name: YugabyteDB  (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
     runs-on: ubuntu-latest
     needs: [ unit-test, test-typings ]
@@ -363,10 +364,18 @@ jobs:
           name: install-build-artifact-node-${{ matrix.node-version }}
       - name: Extract artifact
         run: tar -xf install-build-node-${{ matrix.node-version }}.tar
-      - name: YugabyteDB docker Container (2.12)
+      - name: Install pg-native (Node 14)
+        run: yarn add pg-native --ignore-engines
+        if: matrix.native && matrix.node-version == 14
+      - name: Install pg-native (Node 16)
+        run: npm install --no-save --no-audit pg-native
+        if: matrix.native && matrix.node-version == 16
+      - name: Start docker Container (2.12)
         run: yarn start-yugabytedb-2.12
       - name: Integration Tests
         run: yarn test-integration-yugabytedb
+      - name: Stop Docker container (2.12)
+        run: yarn stop-yugabytedb-2.12
   release:
     name: Release
     runs-on: ubuntu-latest
