--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -341,41 +341,33 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [14, 16]
-        minify-aliases: [true, false]
-        native: [true]
-    name: YugabyteDB  (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
+        yugabytedb-version: [2.12, 2.4]
+    name: YugabyteDB:${{ matrix.yugabytedb-version}} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     needs: [ unit-test, test-typings ]
     env:
-      SEQ_DB: sequelize_test
+      SEQ_DB: yugabyte
       SEQ_USER: yugabyte
       SEQ_PW: yugabyte
       SEQ_PORT: 25099
       DIALECT: yugabytedb
-      SEQ_YB_MINIFY_ALIASES: ${{ matrix.minify-aliases && '1' || '' }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
+      - name: Start YugabyteDB docker container - ${{ matrix.yugabytedb-version }}
+        run: yarn start-yugabytedb-${{matrix.yugabytedb-version}}
       - uses: actions/download-artifact@v3
         with:
           name: install-build-artifact-node-${{ matrix.node-version }}
       - name: Extract artifact
         run: tar -xf install-build-node-${{ matrix.node-version }}.tar
-      - name: Install pg-native (Node 14)
-        run: yarn add pg-native --ignore-engines
-        if: matrix.native && matrix.node-version == 14
-      - name: Install pg-native (Node 16)
-        run: npm install --no-save --no-audit pg-native
-        if: matrix.native && matrix.node-version == 16
-      - name: Start docker Container (2.12)
-        run: yarn start-yugabytedb-2.12
       - name: Integration Tests
         run: yarn test-integration-yugabytedb
-      - name: Stop Docker container (2.12)
-        run: yarn stop-yugabytedb-2.12
+      - name: Stop YugabyteDB docker container (${{ matrix.yugabytedb-version }})
+        run: yarn stop-yugabytedb-${{matrix.yugabytedb-version}}
   release:
     name: Release
     runs-on: ubuntu-latest
