--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "config:base"
-  ],
-  "semanticCommitType": "build"
+    "config:base",
+    ":semanticCommitType(build)",
+    ":maintainLockFilesWeekly"
+  ]
 }
