--- a/package.json
+++ b/package.json
@@ -266,7 +266,7 @@
     "test-integration-mssql": "cross-env DIALECT=mssql npm run test-integration",
     "test-integration-db2": "cross-env DIALECT=db2 npm run test-integration",
     "test-integration-snowflake": "cross-env DIALECT=snowflake npm run test-integration",
-    "test-integration-oracle": "cross-env DYLD_LIBRARY_PATH=~/oracle/instantclient/ TNS_ADMIN=~/oracle/instantclient/network/admin LD_LIBRARY_PATH=~/oracle/instantclient/ DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm run test-integration",
+    "test-integration-oracle": "cross-env DYLD_LIBRARY_PATH=~/Downloads/instantclient_19_8/ TNS_ADMIN=~/Downloads/instantclient_19_8/network/admin LD_LIBRARY_PATH=~/oracle/instantclient/ DIALECT=oracle UV_THREADPOOL_SIZE=128 npm run test-integration",
     "test-mariadb": "cross-env DIALECT=mariadb npm test",
     "test-mysql": "cross-env DIALECT=mysql npm test",
     "test-sqlite": "cross-env DIALECT=sqlite npm test",
@@ -274,7 +274,7 @@
     "test-postgres-native": "cross-env DIALECT=postgres-native npm test",
     "test-mssql": "cross-env DIALECT=mssql npm test",
     "test-db2": "cross-env DIALECT=db2 npm test",
-    "test-oracle": "cross-env DYLD_LIBRARY_PATH=~/oracle/instantclient/ TNS_ADMIN=~/oracle/instantclient/network/admin LD_LIBRARY_PATH=~/oracle/instantclient/ DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 UV_THREADPOOL_SIZE=128 npm test",
+    "test-oracle": "cross-env DYLD_LIBRARY_PATH=~/Downloads/instantclient_19_8/ TNS_ADMIN=~/Downloads/instantclient_19_8/network/admin LD_LIBRARY_PATH=~/oracle/instantclient/ DIALECT=oracle UV_THREADPOOL_SIZE=128 npm test",
     "----------------------------------------- development ---------------------------------------------": "",
     "sscce": "node sscce.js",
     "sscce-mariadb": "cross-env DIALECT=mariadb node sscce.js",
@@ -284,7 +284,7 @@
     "sscce-sqlite": "cross-env DIALECT=sqlite node sscce.js",
     "sscce-mssql": "cross-env DIALECT=mssql node sscce.js",
     "sscce-db2": "cross-env DIALECT=db2 node sscce.js",
-    "sscce-oracle": "cross-env DIALECT=oracle SEQ_ORACLE_USER=sequelizetest SEQ_ORACLE_PW=sequelizepassword SEQ_ORACLE_PORT=1521 SEQ_ORACLE_DB=XEPDB1 node sscce.js",
+    "sscce-oracle": "cross-env DYLD_LIBRARY_PATH=~/Downloads/instantclient_19_8/ TNS_ADMIN=~/Downloads/instantclient_19_8/network/admin LD_LIBRARY_PATH=~/oracle/instantclient/ DIALECT=oracle node sscce.js",
     "prepare": "npm run build && husky install",
     "build": "node ./build.js",
     "---------------------------------------------------------------------------------------------------": ""
