--- a/package.json
+++ b/package.json
@@ -230,17 +230,21 @@
     "start-mysql": "bash dev/mysql/5.7/start.sh",
     "start-mysql-8": "bash dev/mysql/8.0/start.sh",
     "start-postgres": "bash dev/postgres/10/start.sh",
+    "start-postgres-9": "bash dev/postgres/9.5/start.sh",
     "start-mssql": "bash dev/mssql/2019/start.sh",
     "start-db2": "bash dev/db2/11.5/start.sh",
     "stop-mariadb": "bash dev/mariadb/10.3/stop.sh",
     "stop-mysql": "bash dev/mysql/5.7/stop.sh",
     "stop-mysql-8": "bash dev/mysql/8.0/stop.sh",
     "stop-postgres": "bash dev/postgres/10/stop.sh",
+    "stop-postgres-9": "bash dev/postgres/9.5/stop.sh",
     "stop-mssql": "bash dev/mssql/2019/stop.sh",
     "stop-db2": "bash dev/db2/11.5/stop.sh",
     "restart-mariadb": "yarn start-mariadb",
     "restart-mysql": "yarn start-mysql",
+    "restart-mysql-8": "yarn start-mysql",
     "restart-postgres": "yarn start-postgres",
+    "restart-postgres-9": "yarn start-postgres-9",
     "restart-mssql": "yarn start-mssql",
     "restart-db2": "yarn start-db2",
     "----------------------------------------- local tests ---------------------------------------------": "",
