--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -305,7 +305,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [14, 18]
-        mssql-version: [2017, 2019]
+        mssql-version: [2017, 2019, 2022]
     name: MSSQL ${{ matrix.mssql-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     needs: [ unit-test, test-typings ]
